Fixed having scrollbars

--- a/src/small.css
+++ b/src/small.css
@@ -5,9 +5,12 @@ html {
 body {
     background-color: #f5f5f5;
     font-family: Raleway, Arial, Helvetica, sans-serif;
-    position: relative;
+    position: absolute; 
+    top:0;
+    bottom:0;
+    right:0;
+    left:0;
     margin: 0;
-    min-height: 100%;
 }
 *,*+* {
     box-sizing: border-box;
